--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,21 @@ body{
     background-color: pink;
 }
 
-.formulario{
-    background-color: blueviolet;
+form {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    margin: 150px auto;
+    padding: 30px;
+    border: 5px solid black;
+    border-radius: 10px;
+  }
+  
+  label, input, button {
+    margin-bottom: 10px;
+    width: 100%;
+  }
+
+.fondo{
+    background-color: violet;
 }
