--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,55 @@ h1{
 body{
     background-color: pink;
 }
+
+.cuerpo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.album{
+    background-color: violet;
+    border-radius: 30px;
+    width: 150px;
+    height: 80px;
+    text-align: center;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+}
+
+.album1{
+    width: 100%;
+    max-width: 200px;
+    background-color: #fff;
+    padding: 100px;
+    border-radius: 30px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+}
+
+#description{
+    width: 100%;
+    max-width: 200px;
+}
+
+.login{
+    width: 100%;
+    max-width: 200px;
+    background-color: #fff;
+    padding: 50px;
+    border-radius: 30px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+#login1{
+    background-color: violet;
+    border-radius: 30px;
+    text-align: center;
+}
