--- a/styles.css
+++ b/styles.css
@@ -15,23 +15,23 @@ body{
 
 .album{
     background-color: violet;
-    border-radius: 30px;
+    border-radius: 20px;
     width: 150px;
-    height: 80px;
     text-align: center;
-    flex-direction: column;
-    display: flex;
     justify-content: center;
+    position: relative;
+    left: 190px;
+    bottom: 250px;
 }
 
 .album1{
-    width: 100%;
-    max-width: 200px;
+    max-width: 160px;
     background-color: #fff;
     padding: 100px;
     border-radius: 30px;
-    flex-direction: column;
-    display: flex;
+    position: relative;
+    right: 60px;
+    top: 20px;
     justify-content: center;
 }
 
