--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ body{
     text-align: center;
     justify-content: center;
     position: relative;
-    left: 190px;
-    bottom: 250px;
+    left: 200px;
+    bottom: 220px;
 }
 
 .album1{
@@ -59,6 +59,16 @@ body{
     background-color: violet;
     border-radius: 30px;
     text-align: center;
+    max-width: 160px;
+    position: relative;
+    left: 610px;
+    top: 80px;
+}
+
+.h3{
+    background-color: violet;
+    text-align: center;
+    border-radius: 30px;
     max-width: 160px;
     position: relative;
     left: 610px;
